2009-06-04  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.h (X86_64_MS_REGPARM_MAX): Rename from
	X64_REGPARM_MAX.
	(REGPARM_MAX): Use X86_64_MS_REGPARM_MAX.
	(X86_64_MS_SSE_REGPARM_MAX): Rename from X64_SSE_REGPARM_MAX.
	(SSE_REGPARM_MAX): Use X86_64_MS_SSE_REGPARM_MAX.
	* config/i386/i386.c: Use X86_64_MS_REGPARM_MAX instead of
	X64_REGPARM_MAX.  Use X86_64_MS_SSE_REGPARM_MAX instead of
	X64_SSE_REGPARM_MAX.
	* config/i386/i386.md: Use X86_64_MS_SSE_REGPARM_MAX instead of
	X64_SSE_REGPARM_MAX.

2009-06-04  Alexandre Oliva  <aoliva@redhat.com>

	* gcc.c (report_times_to_file): New.
	(execute): Implement it.
	(process_command): Support -time=.
	* doc/invoke.texi: Document it.

2009-06-04  Alexandre Oliva  <aoliva@redhat.com>

	* tree-ssa-live.c (remove_unused_scope_block_p): Keep variables
	that have value exprs.

2009-06-04  Alexandre Oliva  <aoliva@redhat.com>

	* dwarf2asm.c (dw2_force_const_mem): Defer creation of
	declarations for constants until...
	(dw2_output_indirect_constant_1): ... this point.

2009-06-04  Richard Earnshaw  <rearnsha@arm.com>

	PR target/10242
	* arm.md (arm_addsi3): Don't try to split an add with an
	eliminable register until after reload has completed.

2009-06-03  Ian Lance Taylor  <iant@google.com>

	* dummy-checksum.c (executable_checksum): Use EXPORTED_CONST.
	* genattrtab.c (write_length_unit_log): Likewise.
	* genchecksum.c (dosum): Likewise.
	* gengtype.c (write_rtx_next): Likewise.
	(finish_root_table, write_roots): Likewise.
	* gimple.c (gimple_ops_offset_): Likewise.
	* tree-nomudflap.c (gt_ggc_r_gt_tree_mudflap_h): Likewise.
	* config/arc/arc.c (arc_attribute_table): Likewise.
	* config/arm/arm.c (arm_attribute_table): Likewise.
	* config/avr/avr.c (avr_attribute_table): Likewise.
	* config/crx/crx.c (crx_attribute_table): Likewise.
	* config/m32r/m32r.c (m32r_attribute_table): Likewise.
	* config/m68hc11/m68hc11.c (m68hc11_attribute_table): Likewise.
	* config/mcore/mcore.c (mcore_attribute_table): Likewise.